--- a/version/v6-log/test/post.html
+++ b/version/v6-log/test/post.html
@@ -13,7 +13,7 @@
         function loadDoc() {
 
             var datasend = {}
-            datasend.way = 'xxx->x';
+            datasend.way = 'test->x';
             datasend.log = 'asfaklfajsfkljalsfd';
             var obj = JSON.stringify(datasend)
 
@@ -25,7 +25,8 @@
                     document.getElementById("demo").innerHTML = this.responseText;
                 }
             };
-            xhttp.open("POST", "https://tranquil-fjord-14350.herokuapp.com/version/v6-log/run.php", true);
+            //xhttp.open("POST", "https://tranquil-fjord-14350.herokuapp.com/version/v6-log/run.php", true);
+            xhttp.open("POST", "../run.php", true);
             xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
             //xhttp.send("fname=Henry&lname=Ford");
             xhttp.send("v=" + strSend);
